--- a/src/app/features/organisation-section/components/project/project.component.html
+++ b/src/app/features/organisation-section/components/project/project.component.html
@@ -521,19 +521,20 @@
                     </div>
         
                     <!-- Type of Project Filter -->
-                    <div class="relative flex-grow">
-                        <select [(ngModel)]="typeOfProjectFilter" (change)="applyProjectFilters()"
-                            class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
-                            <option value="">Select Type of Project</option>
-                            <option *ngFor="let project of optionTypeOfProject" [value]="project.type_of_project_id">
-                                {{ project.project_type_name }}
-                            </option>
-                        </select>
-                        <button *ngIf="typeOfProjectFilter" (click)="clearProjectFilter('typeOfProjectFilter')"
-                            class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
-                            ×
-                        </button>
-                    </div>
+                    <!-- Type of Project Filter -->
+<div class="relative flex-grow">
+    <select [(ngModel)]="typeOfProjectFilter" (change)="applyProjectFilters()"
+      class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
+      <option value="">Select Type of Project</option>
+      <option *ngFor="let project of optionTypeOfProject" [value]="project.type_of_project_id">
+        {{ project.project_type_name }}
+      </option>
+    </select>
+    <button *ngIf="typeOfProjectFilter" (click)="clearProjectFilter('typeOfProjectFilter')"
+      class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
+      ×
+    </button>
+  </div>
         
                     <!-- Type of Engagement Filter -->
                     <div class="relative flex-grow">
