customer remove modal

--- a/src/app/features/app-center/app-center.component.html
+++ b/src/app/features/app-center/app-center.component.html
@@ -7,7 +7,7 @@
     <!-- Organisation Section -->
     <a routerLink="/organisation" class="bg-white p-6 shadow-md rounded-xl flex flex-col items-center transition hover:shadow-lg hover:bg-gray-50">
       <img src="" alt="Organisation" class="w-26 h-16 mb-4">
-      <h2 class="text-xl font-semibold text-gray-800">Organisation Section</h2>
+      <h2 class="text-xl font-semibold text-gray-800">Organisation Master</h2>
     </a>
 
     <!-- Timesheet App -->
