--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -7,11 +7,35 @@
   <!-- Navbar Center (Organisation Links - Conditionally Shown) -->
  <!-- Navbar Center (Organisation Links - Conditionally Shown) -->
 <!-- Navbar Center (Organisation Links - Conditionally Shown) -->
+<!-- Organisation Links (Dropdown for Customer) -->
 <div *ngIf="showOrganisationLinks" class="hidden sm:flex gap-2 bg-gray-50 p-1 rounded-md border border-gray-200 shadow-sm">
-  <a [routerLink]="['/organisation', 'customer']" routerLinkActive="active-link"
-    class="px-3 py-1 text-gray-700 hover:bg-blue-500 hover:text-white rounded transition">
-    Customer
-  </a>
+  
+  <!-- Customer Dropdown -->
+  <div class="relative group">
+    <a [routerLink]="['/organisation', 'customer']" routerLinkActive="active-link"
+      class="px-3 py-1 text-gray-700 hover:bg-blue-500 hover:text-white rounded transition cursor-pointer flex items-center">
+      Customer
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd"
+          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+          clip-rule="evenodd" />
+      </svg>
+    </a>
+
+    <!-- Dropdown Menu -->
+    <div class="absolute left-0 mt-1 w-44 bg-white shadow-lg rounded-md border border-gray-200 z-10 hidden group-hover:block">
+      <a (click)="navigateToCustomerSection('customer')"
+        class="block px-4 py-2 text-gray-700 hover:bg-blue-500 hover:text-white cursor-pointer">
+        Customer
+      </a>
+      <a (click)="navigateToCustomerSection('customerCategory')"
+        class="block px-4 py-2 text-gray-700 hover:bg-blue-500 hover:text-white cursor-pointer">
+        Customer Categories
+      </a>
+    </div>
+  </div>
+
+  <!-- Other Links -->
   <a [routerLink]="['/organisation', 'project']" routerLinkActive="active-link"
     class="px-3 py-1 text-gray-700 hover:bg-blue-500 hover:text-white rounded transition">
     Project
@@ -20,12 +44,12 @@
     class="px-3 py-1 text-gray-700 hover:bg-blue-500 hover:text-white rounded transition">
     Employee
   </a>
-  
   <a [routerLink]="['/organisation', 'admin']" routerLinkActive="active-link"
     class="px-3 py-1 text-gray-700 hover:bg-blue-500 hover:text-white rounded transition">
     Admin
   </a>
 </div>
+
 
 
   <!-- Navbar Center (Timesheet Links - Conditionally Shown) -->
