--- a/src/app/features/organisation-section/components/employee/employee.component.html
+++ b/src/app/features/organisation-section/components/employee/employee.component.html
@@ -2,16 +2,17 @@
     <!-- Section Selection Buttons -->
     <div class="flex space-x-4 mb-4">
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
-            (click)="selectedSection = 'employee'">Employee</button>
+            (click)="changeSection('employee')">Employee</button>
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
-            (click)="selectedSection = 'department'">Department</button>
+            (click)="changeSection('department')">Department</button>
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
-            (click)="selectedSection = 'position'">Position</button>
+            (click)="changeSection('position')">Position</button>
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
-            (click)="selectedSection = 'skills'">Skills</button>
+            (click)="changeSection('skills')">Skills</button>
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
-            (click)="selectedSection = 'reportingManagerHistory'">Reporting Manager History</button>
+            (click)="changeSection('reportingManagerHistory')">Reporting Manager History</button>
     </div>
+
 
     <!-- Employee Section -->
     <div *ngIf="selectedSection === 'employee'">
